Added multiple file upload and upload type field

--- a/module/Olcs/view/olcs/uploads/upload.phtml
+++ b/module/Olcs/view/olcs/uploads/upload.phtml
@@ -2,8 +2,8 @@
 echo $this->render(
     '/partials/page-header.phtml',
     array(
-        'pageTitle' => $this->translate('Ebsr pack upload'),
-        'pageSubTitle'=> $this->translate('Use this form to upload an EBSR pack'),
+        'pageTitle' => $this->translate('ebsr-upload-title'),
+        'pageSubTitle'=> $this->translate('ebsr-upload-subtitle'),
     )
 );
 ?>
