--- a/module/Olcs/view/olcs/uploads/upload.phtml
+++ b/module/Olcs/view/olcs/uploads/upload.phtml
@@ -2,16 +2,25 @@
 echo $this->render(
     '/partials/page-header.phtml',
     array(
-        'pageTitle' => $this->translate('ebsr-upload-title'),
-        'pageSubTitle'=> $this->translate('ebsr-upload-subtitle'),
+        'pageTitle' => $this->translate('ebsr-upload-title')
     )
 );
 ?>
-<div class="three-quarters">
-<?php echo $this->flashMessengerAll(); ?>
+<div class="two-thirds">
+    <div class="article">
+        <p><?php echo $this->translate('ebsr-upload-subtitle');?></p>
+        <h3>Please check the following</h3>
+        <ul>
+            <li>Lorem ipsum dolor sit amet</li>
+            <li>Consectetur adipiscing elit tempor incididun</li>
+            <li>Aliquip ex ea commodo consequa</li>
+            <li>Ut enim ad minim veniam</li>
+        </ul>
+    </div>
+    <?php echo $this->flashMessengerAll(); ?>
 
-<?php
-$this->form->prepare();
-echo $this->form()->render($this->form);
-?>
+    <?php
+    $this->form->prepare();
+    echo $this->form()->render($this->form);
+    ?>
 </div>
