More front end tweaks, added support partial

--- a/module/Olcs/view/olcs/uploads/upload.phtml
+++ b/module/Olcs/view/olcs/uploads/upload.phtml
@@ -24,3 +24,11 @@ echo $this->render(
     echo $this->form()->render($this->form);
     ?>
 </div>
+
+<div class="one-third sidebar">
+    <?php
+    echo $this->render(
+        '/partials/contact-support.phtml'
+    );
+    ?>
+</div><!-- .one-quarter -->
