--- a/module/Olcs/view/layouts/search.phtml
+++ b/module/Olcs/view/layouts/search.phtml
@@ -2,8 +2,10 @@
 echo $this->render(
     '/partials/page-header.phtml',
     array(
-        'pageTitle' => $this->translate($this->pageTitle),
-        'pageSubTitle'=> $this->translate($this->pageSubtitle)
+        'pageTitle' => isset($this->pageTitle) ? $this->translate($this->pageTitle) : '',
+        'pageSubTitle'=> isset($this->pageSubtitle) ? $this->translate($this->pageSubtitle) : '',
+        'pageHeaderText'=> isset($this->pageHeaderText) ? $this->translate($this->pageHeaderText) : '',
+        'pageHeaderUrl'=> isset($this->pageHeaderUrl) ? $this->pageHeaderUrl : ''
     )
 );
 ?>
