Fixed self serve view for all and disabled ebsr to only those with ebsr permission. Added link to sign out

--- a/module/Olcs/view/layouts/base.phtml
+++ b/module/Olcs/view/layouts/base.phtml
@@ -28,7 +28,7 @@
         <ul class="user-menu">
           <li class="user-menu__item">Katy Hasley, <b>Operator Licensing Ltd.</b></li>
           <li class="user-menu__item"><a href="">My details</a></li>
-          <li class="user-menu__item"><a href="">Sign out</a></li>
+          <li class="user-menu__item"><a href="<?php echo $this->url('zfcuser/logout');?>">Sign out</a></li>
         </ul>
       </div><!-- end .user-header -->
 
