Move display of interim status to summary page

--- a/module/Olcs/view/pages/application-post-submit-summary.phtml
+++ b/module/Olcs/view/pages/application-post-submit-summary.phtml
@@ -29,6 +29,14 @@
         <dd><?php echo $status; ?></dd>
         <dt><?php echo $this->translate('target-completion-date'); ?></dt>
         <dd><?php echo $targetCompletionDate; ?></dd>
+        
+        <?php if ($interimStatus): ?>
+            <dt><?php echo $this->translate('interim-status'); ?></dt>
+            <dd><?php echo $this->translate($interimStatus); ?></dd>
+            <dt><?php echo $this->translate('interim-start-date'); ?></dt>
+            <dd><?php echo strftime("%d %B %G",strtotime($interimStartDate)); ?></dd>
+        <?php endif; ?>
+        
     </dl><!-- .meta -->
     <div class="links">
         <h3><?php echo $this->translate('sidebar-applying-for-licence'); ?></h3>
