Added translation, updated routes

--- a/module/Olcs/view/pages/lva-tm-details.phtml
+++ b/module/Olcs/view/pages/lva-tm-details.phtml
@@ -22,7 +22,7 @@
                 <li><?php echo $this->formElement($element); ?></li>
                 <?php
 
-                // Restire the previous attributes
+                // Restore the previous attributes
                 $element->setAttributes($attributes);
             }
             ?>
@@ -56,19 +56,7 @@
     ?>
     </div>
     <div class="one-third sidebar">
-
-      <div class="support">
-        <h3>Support</h3>
-        <b>Call: 0113 254 3200</b>
-        <p>Mon to Thurs: 8:30am – 5pm<br>
-           Fri: 8:30am – 4pm
-        </p>
-        <p>Closed at weekend and on public and bank holidays</p>
-        <p>Or email our support team at:<br>
-        <a href="">operatorlicensing@otc.gov.uk</a>
-        </p>
-      </div>
-
+      <?php echo $this->translate('markup-support-contact-address'); ?>
     </div>
     <?php echo $this->form()->closeTag(); ?>
 </div>
