OLCS-8505 TM dashboard

--- a/module/Olcs/view/dashboard-tm.phtml
+++ b/module/Olcs/view/dashboard-tm.phtml
@@ -2,7 +2,7 @@
 
 <div class="page-header">
   <div class="page-header__wrapper">
-  <h3 class="page-header__subtitle"><?php echo $this->translate('dashboard.subtitle'); ?></h3>
+  <h3 class="page-header__subtitle"><?php echo $this->currentUser()->getFullName() ?></h3>
   <h1><?php echo $this->translate('dashboard.title'); ?></h1>
   </div><!-- .page-header__wrapper -->
 </div><!-- .page-header-->
@@ -10,14 +10,11 @@
 
 <div class="dashboard two-thirds">
   <?php echo $this->flashMessengerAll(); ?>
-  <?php echo $licences; ?>
-  <div class="actions-container" style="margin-bottom: 3em;">
-    <a href="<?php echo $this->url('create_application'); ?>" class="action--primary">
-      <?php echo $this->translate('application.new.button'); ?>
-    </a>
-  </div>
-  <?php echo $variations; ?>
-  <?php echo $applications; ?>
+
+  <h3><?php echo $this->translate('Open applications'); ?></h3>
+  <?php echo $this->translate('markup-dashboard-tm-intro'); ?>
+
+  <?php echo $applicationsTable; ?>
 </div>
 
 
