--- a/module/Olcs/view/layouts/base.phtml
+++ b/module/Olcs/view/layouts/base.phtml
@@ -24,9 +24,9 @@
     <div class="page-wrapper">
 
       <div class="user-header">
-        <p class="phase"><span class="phase__tag">alpha</span><span class="phase__message">This is a new service – <a href="">help us improve it.</a></span></p> 
+        <p class="phase"><span class="phase__tag">alpha</span><span class="phase__message">This is a new service – <a href="">help us improve it.</a></span></p>
         <ul class="user-menu">
-          <li class="user-menu__item">Katy Hasley, <b>Operator Licensing Ltd.</b></li>
+          <li class="user-menu__item"><?php echo $this->currentUser()->getFullName() ?>, <b>Operator Licensing Ltd.</b></li>
           <li class="user-menu__item"><a href="">My details</a></li>
           <li class="user-menu__item"><a href="<?php echo $this->url('zfcuser/logout');?>">Sign out</a></li>
         </ul>
