--- a/module/Olcs/view/pages/lva-tm-details-action.phtml
+++ b/module/Olcs/view/pages/lva-tm-details-action.phtml
@@ -1,29 +1,22 @@
-<style>
-    i {
-        color:red;
-    }
-</style>
-
-
 <div class="js-body">
 
     <div class="page-header">
       <?php echo $this->navigation('navigation')->breadcrumbs()->setPartial('partials/breadcrumbs'); ?>
       <div class="page-header__wrapper">
         <h3 class="page-header__subtitle"><?php echo $this->currentUser()->getFullName() ?></h3>
-        <h1><?php echo $this->translate('Transport manager form'); ?></h1>
+        <h1><?php echo $this->translate('tm-details-heading'); ?></h1>
         <ul class="page-header__actions">
             <?php if ($this->actions['edit']): ?>
             <li>
                 <a href="<?php echo $this->url('lva-application/transport_manager_details/action', ['action' => 'edit'], [], true); ?>" class="page-header__action js-modal-ajax">
-                    <?php echo $this->translate('Edit form'); ?>
+                    <?php echo $this->translate('tm-details-edit-form-link-text'); ?>
                 </a>
             </li>
             <?php endif; ?>
             <?php if ($this->actions['view']): ?>
             <li>
                 <a href="<?php echo $this->viewActionUrl ?>" class="page-header__action" target="_blank">
-                    <?php echo $this->translate('View form'); ?>
+                    <?php echo $this->translate('tm-details-view-form-link-text'); ?>
                 </a>
             </li>
             <?php endif; ?>
@@ -57,11 +50,11 @@
     </div>
     <div class="one-third sidebar">
         <dl class="meta">
-          <dt><?php echo $this->translate('Reference No.'); ?></dt>
+          <dt><?php echo $this->translate('tm-details-reference-no'); ?></dt>
           <dd><?php echo $this->referenceNo ?></dd>
-          <dt><?php echo $this->translate('Licence application No.'); ?></dt>
+          <dt><?php echo $this->translate('tm-details-licence-application-no'); ?></dt>
           <dd><?php echo $this->licenceApplicationNo ?></dd>
-          <dt><?php echo $this->translate('Status'); ?></dt>
+          <dt><?php echo $this->translate('tm-details-status'); ?></dt>
           <dd><?php echo $this->translate($this->tmaStatus['description']); ?></dd>
         </dl>
 
