--- a/module/Olcs/view/form.phtml
+++ b/module/Olcs/view/form.phtml
@@ -8,7 +8,10 @@
 
 <div class="dashboard two-thirds js-body">
     <?php echo $this->flashMessengerAll(); ?>
-    <?php echo $users->render(); ?>
+    <?php
+        echo $this->formErrors($form);
+        echo $this->form($form);
+    ?>
 </div>
 
 
