--- a/module/Olcs/view/pages/lva-tm-details-action.phtml
+++ b/module/Olcs/view/pages/lva-tm-details-action.phtml
@@ -3,7 +3,7 @@
     <div class="page-header">
       <?php echo $this->navigation('navigation')->breadcrumbs()->setPartial('partials/breadcrumbs'); ?>
       <div class="page-header__wrapper">
-        <h3 class="page-header__subtitle"><?php echo $this->currentUser()->getFullName() ?></h3>
+        <h3 class="page-header__subtitle"><?php echo $this->tmFullName ?></h3>
         <h1><?php echo $this->translate('tm-details-heading'); ?></h1>
         <ul class="page-header__actions">
             <?php if ($this->actions['edit']): ?>
