OLCS-7159 update views

--- a/module/Olcs/view/fees.phtml
+++ b/module/Olcs/view/fees.phtml
@@ -16,10 +16,8 @@
 </div>
 
 
-<div class="one-third sidebar">
 
-  <?php echo $this->translate('markup-useful-links'); ?>
 
-  <?php echo $this->translate('markup-support-contact-address'); ?>
 
-</div><!-- .one-third.sidebar -->
+
+<?php echo $this->partial('partials/dashboard-right-column'); ?>
