--- a/module/Olcs/view/dashboard.phtml
+++ b/module/Olcs/view/dashboard.phtml
@@ -20,13 +20,4 @@
   <?php echo $applications; ?>
 </div>
 
-
-
-
-<div class="one-third sidebar">
-
-  <?php echo $this->translate('markup-useful-links'); ?>
-
-  <?php echo $this->translate('markup-support-contact-address'); ?>
-
-</div><!-- .one-third.sidebar -->
+<?php echo $this->partial('partials/dashboard-right-column'); ?>
