--- a/module/Olcs/view/partials/dashboard-nav.phtml
+++ b/module/Olcs/view/partials/dashboard-nav.phtml
@@ -3,7 +3,10 @@
   <?php foreach ($this->container as $page): ?>
     <?php if ($page->isVisible(true) && $this->navigation()->accept($page, false)): ?>
         <li class="tab-list__item<?php if ($page->isActive(true)) { ?> active<?php } ?>">
-        <?php echo $this->navigation()->menu()->htmlify($page) . PHP_EOL; ?>
+        <a href="<?php echo $page->getHref(); ?>">
+        <?php echo $this->translate($page->getLabel()); ?>
+        <?php echo !is_null($page->get('count')) ? '('.$page->get('count').')' : '';?>
+        </a>
         </li>
     <?php endif; ?>
   <?php endforeach; ?>
