--- a/module/Olcs/view/partials/dashboard-nav.phtml
+++ b/module/Olcs/view/partials/dashboard-nav.phtml
@@ -5,7 +5,7 @@
         <li class="tab-list__item<?php if ($page->isActive(true)) { ?> active<?php } ?>">
         <a href="<?php echo $page->getHref(); ?>">
         <?php echo $this->translate($page->getLabel()); ?>
-        <?php echo !is_null($page->get('count')) ? '('.$page->get('count').')' : '';?>
+        <?php echo $page->get('count') ? '('.$page->get('count').')' : '';?>
         </a>
         </li>
     <?php endif; ?>
