Added error messages back to the form after validation, rendered form errors

--- a/module/Olcs/view/olcs/uploads/upload.phtml
+++ b/module/Olcs/view/olcs/uploads/upload.phtml
@@ -20,8 +20,8 @@ echo $this->render(
     <?php echo $this->flashMessengerAll(); ?>
 
     <?php
+    echo $this->formErrors($this->form, true);
     $this->form->prepare();
-    echo $this->formErrors($this->form);
     echo $this->form()->render($this->form);
     ?>
 </div>
