--- a/module/Olcs/view/pay-fee.phtml
+++ b/module/Olcs/view/pay-fee.phtml
@@ -4,7 +4,7 @@
     ->setPartial('partials/breadcrumbs'); ?>
   <div class="page-header__wrapper">
     <h3 class="page-header__subtitle">
-      <?php echo $this->translate('licence'); ?> <?php echo $fee['licNo']; ?>
+      <?php echo $this->translate('licence'); ?> <?php echo $fee['licence']['licNo']; ?>
     </h3>
     <h1><?php echo $fee['description']; ?></h1>
   </div><!-- end .page-header__wrapper -->
@@ -25,7 +25,7 @@
                 ],
                 [
                     'label' => 'pay-fees.lic-no',
-                    'value' => $fee['licNo'],
+                    'value' => $fee['licence']['licNo'],
                 ],
                 [
                     'label' => 'pay-fees.created',
