--- a/module/Olcs/view/pages/fees/payment-success.phtml
+++ b/module/Olcs/view/pages/fees/payment-success.phtml
@@ -1,18 +1,12 @@
-<?php echo $this->doctype(); ?>
-<html lang="en" class="review">
-    <head>
-        <meta charset="utf-8">
-        <?php
-        echo $this->headTitle($this->translate(''));
-        echo $this->headMeta()
-            ->appendName('viewport', 'width=device-width, initial-scale=1.0')
-            ->appendHttpEquiv('X-UA-Compatible', 'IE=edge');
-        echo $this->headLink()->appendStylesheet($this->assetPath('/styles/' . $this->applicationName() . '.css'));
-        echo $this->headScript();
-        ?>
-    </head>
-    <body>
-        <h1><?php echo $this->translate('pay-fees.success.print-title'); ?></h1>
+<div class="page-header">
+  <?php echo $this->navigation('Olcs\Navigation\DashboardNavigation')
+    ->breadcrumbs()
+    ->setPartial('partials/breadcrumbs'); ?>
+  <div class="page-header__wrapper">
+    <h1><?php echo $this->translate('pay-fees.success.title'); ?></h1>
+  </div><!-- end .page-header__wrapper -->
+</div>
+<div class="three-quarters">
 
 <?php echo $this->render(
     'partials/read-only/main',
@@ -49,3 +43,12 @@
   <hr>
 
   <?php echo $this->translate('markup-pay-fees-success-notice'); ?>
+
+  <hr>
+
+  <div class="actions-container">
+    <a href="<?php echo $this->url('fees');?>" class="action--primary large"><?php echo $this->translate('pay-fees.success.back-to-home'); ?></a>
+    <a href="<?php echo $this->url('fees/receipt', ['action' => 'print'], [], true);?>" class="action--secondary large" target="_blank"><?php echo $this->translate('pay-fees.success.print-receipt'); ?></a>
+  </div>
+
+</div>
