--- a/module/Olcs/view/pages/fees/payment-success-print.phtml
+++ b/module/Olcs/view/pages/fees/payment-success-print.phtml
@@ -5,33 +5,10 @@
     <h1><?php echo $this->translate('pay-fees.success.print-title'); ?></h1>
 
     <div class="review-section">
-<?php echo $this->render(
-    'partials/read-only/main',
-    [
-        'header' => 'pay-fees.success.header',
-        'multiItems' => [
-            [
-                [
-                    'label' => 'pay-fees.success.operator-name',
-                    'value' => $operatorName,
-                ],
-                [
-                    'label' => 'pay-fees.success.paid-by',
-                    'value' => $fees[0]['payerName'],
-                ],
-                [
-                    'label' => 'pay-fees.success.payment-reference',
-                    'value' => $payment['guid'],
-                ],
-                [
-                    'label' => 'pay-fees.success.received',
-                    'date' => $fees[0]['receivedDate'],
-                ],
-            ],
-          ],
-      ]
-    );
-?>
+<?php echo $this->partial(
+    'partials/fees/payment-details',
+    compact('operatorName', 'fees', 'payment')
+);?>
     </div>
 
     <div class="review-section">
