--- a/module/Olcs/view/pages/fees/payment-success.phtml
+++ b/module/Olcs/view/pages/fees/payment-success.phtml
@@ -6,36 +6,16 @@
     <h1><?php echo $this->translate('pay-fees.success.title'); ?></h1>
   </div><!-- end .page-header__wrapper -->
 </div>
+
 <div class="three-quarters">
 
-<?php echo $this->render(
-    'partials/read-only/main',
-    [
-        'header' => 'pay-fees.success.header',
-        'multiItems' => [
-            [
-                [
-                    'label' => 'pay-fees.success.operator-name',
-                    'value' => $operatorName,
-                ],
-                [
-                    'label' => 'pay-fees.success.paid-by',
-                    'value' => $fees[0]['payerName'],
-                ],
-                [
-                    'label' => 'pay-fees.success.payment-reference',
-                    'value' => $payment['guid'],
-                ],
-                [
-                    'label' => 'pay-fees.success.received',
-                    'date' => $fees[0]['receivedDate'],
-                ],
-            ],
-          ],
-      ]
-    );
-  ?>
-  <!-- table -->
+  <?php echo $this->partial(
+    'partials/fees/payment-details',
+    compact('operatorName', 'fees', 'payment')
+  );?>
+
+  <hr>
+
   <?php if (isset($table)): ?>
     <?php echo $table; ?>
   <?php endif; ?>
