--- a/module/Olcs/view/pages/fees/pay-multi.phtml
+++ b/module/Olcs/view/pages/fees/pay-multi.phtml
@@ -1,7 +1,11 @@
 <div class="page-header">
-  <?php echo $this->navigation('Olcs\Navigation\DashboardNavigation')
-    ->breadcrumbs()
-    ->setPartial('partials/breadcrumbs'); ?>
+
+  <ol class="breadcrumbs">
+    <li class="breadcrumbs__item">
+      <a href="<?php echo $this->url('fees');?>"><?php echo $this->translate('pay-fees.back-to-home'); ?></a>
+    </li>
+  </ol>
+
   <div class="page-header__wrapper">
     <h1><?php echo $this->translate('pay-fees.title'); ?></h1>
   </div><!-- end .page-header__wrapper -->
