--- a/module/Olcs/view/layouts/base.phtml
+++ b/module/Olcs/view/layouts/base.phtml
@@ -54,5 +54,11 @@
 
     <?php echo $this->inlineScript()
         ->prependFile($this->assetPath('js/' . $this->applicationName() . '.js')) ?>
+
+    <script>
+      OLCS.ready(function() {
+        OLCS.eventEmitter.emit("render");
+      });
+    </script>
   </body>
 </html>
