OLCS-10165 remove duplicated support text, fix typo

--- a/module/Olcs/view/olcs/uploads/upload.phtml
+++ b/module/Olcs/view/olcs/uploads/upload.phtml
@@ -27,9 +27,5 @@ echo $this->render(
 </div>
 
 <div class="one-third sidebar">
-    <?php
-    echo $this->render(
-        '/partials/contact-support.phtml'
-    );
-    ?>
+    <?php echo $this->translate('markup-support-contact-address');?>
 </div><!-- .one-quarter -->
