--- a/module/Olcs/view/pages/lva-details.phtml
+++ b/module/Olcs/view/pages/lva-details.phtml
@@ -22,17 +22,7 @@
   <h3>Filter by:</h3>
   <?php echo $this->form($filterForm); ?>
 
-  <div class="support">
-    <h3>Support</h3>
-    <b>Call: 0113 254 3200</b>
-    <p>Mon to Thurs: 8:30am – 5pm<br />
-       Fri: 8:30am – 4pm
-    </p>
-    <p>Closed at weekend and on public and bank holidays</p>
-    <p>Or email our support team at:<br/>
-    <a href="">operatorlicensing@otc.gov.uk</a>
-    </p>
-  </div>
+  <?php echo $this->translate('markup-support-contact-address');?>
 </div>
 <div class="five-eigths lva-details">
   <div class="js-body">
@@ -77,16 +67,6 @@ if (isset($sectionText)) {
 
 <?php if (!isset($filterForm)): ?>
 <div class="one-third">
-  <div class="support">
-    <h3>Support</h3>
-    <b>Call: 0113 254 3200</b>
-    <p>Mon to Thurs: 8:30am – 5pm<br />
-       Fri: 8:30am – 4pm
-    </p>
-    <p>Closed at weekend and on public and bank holidays</p>
-    <p>Or email our support team at:<br/>
-    <a href="">operatorlicensing@otc.gov.uk</a>
-    </p>
-  </div>
+  <?php echo $this->translate('markup-support-contact-address');?>
 </div>
 <?php endif; ?>
