Added view models rendering results for operator and licence details

--- a/module/Olcs/view/olcs/search/search-result.phtml
+++ b/module/Olcs/view/olcs/search/search-result.phtml
@@ -1,9 +1,8 @@
+<?php echo $this->flashMessengerAll();
+
+echo $this->partial('partials/search/licence-details');
+echo $this->partial('partials/search/operator-details');
 
 
 
-<div class="two-thirds">
-    <?php echo $this->flashMessengerAll(); ?>
 
-
-    HERE
-</div>
