--- a/module/Olcs/view/partials/search/search-left-column.phtml
+++ b/module/Olcs/view/partials/search/search-left-column.phtml
@@ -1,5 +1,5 @@
 
-<?php echo $this->translate('search-result-on-this-page'); ?>
+<h3><?php echo $this->translate('search-result-on-this-page'); ?></h3>
 
 <p>
   <a href=""><?php echo $this->translate('search-result-section-licence-details'); ?></a>
