--- a/module/Olcs/view/partials/search/search-left-column.phtml
+++ b/module/Olcs/view/partials/search/search-left-column.phtml
@@ -2,32 +2,17 @@
 <h3><?php echo $this->translate('search-result-on-this-page'); ?></h3>
 
 <p>
-  <a href=""><?php echo $this->translate('search-result-section-licence-details'); ?></a>
+  <a href="#licence-details"><?php echo $this->translate('search-result-nav-licence-details'); ?></a>
 </p>
 <p>
-  <a href=""><?php echo $this->translate('search-result-section-operator-details'); ?></a>
+  <a href="#contact-details"><?php echo $this->translate('search-result-nav-contact-details'); ?></a>
 </p>
 <p>
-  <a href=""><?php echo $this->translate('search-result-section-contact-details'); ?></a>
+  <a href="#operating-centres"><?php echo $this->translate('search-result-nav-operating-centres'); ?></a>
 </p>
 <p>
-  <a href=""><?php echo $this->translate('search-result-section-directors'); ?></a>
+  <a href="#transport-managers"><?php echo $this->translate('search-result-nav-transport-managers'); ?></a>
 </p>
 <p>
-  <a href=""><?php echo $this->translate('search-result-section-transport-managers'); ?></a>
-</p>
-<p>
-  <a href=""><?php echo $this->translate('search-result-section-operating-centres'); ?></a>
-</p>
-<p>
-  <a href=""><?php echo $this->translate('search-result-section-vehicles'); ?></a>
-</p>
-<p>
-  <a href=""><?php echo $this->translate('search-result-section-applications'); ?></a>
-</p>
-<p>
-  <a href=""><?php echo $this->translate('search-result-section-conditions-undertakings'); ?></a>
-</p>
-<p>
-  <a href=""><?php echo $this->translate('search-result-section-other-licences'); ?></a>
+  <a href="#licence-details"><?php echo $this->translate('search-result-nav-related-operator-licences'); ?></a>
 </p>
